<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="50dp"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_simulator"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AA00AA" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gotShot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got_shot"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/shooterID_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/user_id"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="number"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/ok1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shoot_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoot" />

        <Button
            android:id="@+id/reload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:text="@string/reload" />

        <Button
            android:id="@+id/kill_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kill" />

        <Button
            android:id="@+id/suicide_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:text="@string/suicide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_xp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/xp_amount_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/amount"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" >

        </EditText>

        <Button
            android:id="@+id/ok2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>